# tm-reporter

./: CHANGELOG.md  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  setup.sh  tox.ini
.github/workflows/: python-package.yml
scripts/: tm-reporter
templates/: report.html  report.twiki
tests/: test_filters.py
tmReporter/: __init__.py  __main__.py  filters.py  reporter.py
tmReporter/templates/: report.html  report.twiki
