[metadata]
name = tm-reporter
version = attr: tmReporter.__version__
author = Bernhard Arnold
author_email = bernhard.arnold@cern.ch
description = Generate HTML/TWiki reports from XML trigger menu.
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/cms-l1-globaltrigger/tm-reporter"
license = GPLv3
classifiers =
    "Topic :: Software Development"
    "Topic :: Utilities"

[options]
python_requires = >=3.6
packages = find:
install_requires =
#    tm-python @ file:///home/bergauer/utm_0.12.0_test/tm-python/tm_python-0.12.0-py3-none-any.whl
    Jinja2==2.11.*
    markupsafe==2.0.*
test_suite = tests
include_package_data = True

[options.packages.find]
exclude=tests

[options.package_data]
tmReporter.templates =
    *.html
    *.twiki

[options.entry_points]
console_scripts =
    tm-reporter = tmReporter.__main__:main

[mypy]

[mypy-tmEventSetup.*]
ignore_missing_imports = True

[mypy-tmTable.*]
ignore_missing_imports = True
